added screen to appear on startup and for editing the coded message

--- a/style.css
+++ b/style.css
@@ -1,14 +1,60 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: sans-serif;
   font-size: 1.25rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h1 {
+
+}
+
+section { 
+  width: 100%;
+}
+
+.hidden {
+  display: none !important;
+}
+
+section#edit-screen { 
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  /* padding-top: 30%; */
+  background-color: hsla(207, 44%, 49%, .8);
 }
 
 textarea {
-  font-size: 1rem;
+  width: 100vw;
+  height: 200px;
+  padding: 20px;
+  font-size: 1.25rem;
+  line-height: 1.5rem;
+  background-color: hsla(250, 100%, 99%, 0.906);
 }
 
-span {
-  color: red;
+button {
+  max-width: 150px;
+  margin: 15px;
+  border-radius: 10px;
+  padding: 8px 15px;
+  font-size: 1.25rem;
+}
+
+button:hover {
+    background: blue;
 }
 
 input {
@@ -29,4 +75,15 @@ section div {
   display: flex;
   justify-content: space-between;
   margin: 8px;
+}
+
+
+span {
+  color: red;
+  padding: 0 2px;
+}
+
+.unknown {
+  background-color: dimgray;
+  color: whitesmoke;
 }
