when clicking on a letter input, all corresponding letters in the result display will be highlighted

--- a/style.css
+++ b/style.css
@@ -79,11 +79,14 @@ section div {
 
 
 span {
-  color: red;
   padding: 0 2px;
 }
 
 .unknown {
   background-color: dimgray;
   color: whitesmoke;
+}
+
+.active { 
+  color: red;
 }
